--- a/cover.css
+++ b/cover.css
@@ -29,12 +29,11 @@
   font-weight: 700;
   color: rgba(255, 255, 255, .5);
   background-color: transparent;
-  border-bottom: .25rem solid transparent;
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
+  color: rgba(255, 255, 255, .3);
 }
 
 .nav-masthead .nav-link + .nav-link {
@@ -43,5 +42,4 @@
 
 .nav-masthead .active {
   color: #fff;
-  border-bottom-color: #fff;
 }
